app/assets/stylesheets/5-pages/home.scss
.wrapper{
  position: relative;
  overflow: hidden;
  .section{
    .container{
      @include respond-below(sm) {
        width: 100%;
      }
    }
    &.top-section{
      padding: 3rem 2rem 0 2rem;
      @include respond-above(sm) {
        padding: 5rem 2rem 0 2rem;
      }
    }
    &.section-hurrah{
      background-color: $lighter-grey;
      color: $black;
      position: relative;
      .file-custom{
        background-color: white;
      }
      .section-hurrah--results{
        font-weight: 300;
      }
      .section-hurrah--bg{
        position: absolute;
        display: flex;
        flex-direction: row;
        height: 100%;
        top: 0;
        .section-hurrah--bg-left{
          background: asset-url('hurrah-bg-left.svg');
          background-repeat: no-repeat;
          background-position: left;
          flex-basis: 50%;
          width: 50vw;
          height: 100%;
          display: none;
          @include respond-above(md) {
            display: block;
          }
        }
        .section-hurrah--bg-right{
          background: asset-url('hurrah-bg-right-sm.svg');
          background-repeat: no-repeat;
          background-position: center;
          width: 100vw;
          height: 100%;
          display: block;
          left: -4vw;
          position: absolute;
          background-size: contain;
          @include respond-above(md) {
            background: asset-url('hurrah-bg-right.svg');
            background-repeat: no-repeat;
            background-position: right;
            flex-basis: 50%;
            width: 50vw;
            left: auto;
            position: relative;
            right: 0;
          }
          height: 100%;
          display: block;
        }
      }
    }
    &.section-result{
      background-color: $light-grey;
      color: $black;
      position: relative;
      .section__content{
        padding: 0rem 1rem;
        @include respond-above(xs) {
          padding: 0rem 6rem;
        } 
        @include respond-above(sm) {
          padding: 0rem 4rem;
        } 
        @include respond-above(md) {
          padding: 0rem 7rem;
        }
      }
      .section__bg{
        overflow: visible;
        top: 0;
        span{
          img{
            top: -8rem;
          }
        }
        @include respond-above(xs) {
          min-height: auto;
          span{
            img{
              left: -6rem;
            }
          }
        }
        @include respond-above(sm) {
          min-height: auto;
          span{
            img{
              left: -6rem;
            }
          }
        }
        @include respond-above(md) {
          min-height: auto;
          span{
            img{
              left: -2rem;
            }
          }
        }
        @include respond-above(lg) {
          min-height: auto;
          span{
            img{
              left: 3rem;
            }
          }
        }
      }
    }
    &.section-results{
      padding: 4rem 1rem 0;
      @include respond-above(sm) {
          padding: 1rem;
      }
      .section__content{
        .results{
          margin-bottom: 4rem;
          .results-title{
            display: flex;
            justify-content: center;
            align-items: center;
            h1{
              font-weight: 300;
              margin-bottom: 1.5rem;
              display: inline-block;
              padding: 1rem 1rem 0 0;
            }
            .results-length{
              display: inline-block;
              color: white;
              background: $black;
              width: 44px;
              height: 44px;
              border-radius: 44px;
              padding: 10px 0;
            }
            &.warnings-title{
              h1{
                color: $yellow;
              }
              .results-length{
                background: $yellow;
              }
            }
            &.advisories-title{
              h1{
                color: $red;
              }
              .results-length{
                background: $red;
              }
            }
          }
          .results-content{
            padding: 4rem;
            border: 2px solid;
            margin-bottom: 1.5rem;
            text-align: left;
            display: none;
            @include respond-above(xs) {
              display: flex;
              flex-direction: column;
            }
            &.warnings-content{
              border-color: $yellow;
            }
            &.advisories-content{
              border-color: $red;
              .advisory-gem{
                h2{
                  font-weight: bold;
                  text-transform: uppercase;    
                }
              }
              .advisory-info{
                border-bottom: 1px solid $black;
                margin-bottom: 2rem;
                padding-bottom: 1rem;
                p{
                  margin: 0;
                  font-weight: bold;
                  &.advisory-info__label{
                    color: $red;
                    margin-top: .5rem;
                  }
                }
                .btn{
                  width: 100%;
                  padding: 1.22rem 2rem;
                }
                > div{
                  margin-bottom: 1rem;
                  @include respond-above(sm) {
                    margin-bottom: 0;
                  }
                }
              }
              .advisory-title{
                color: $red;
              }
              .advisory-description{
                margin-bottom: 2rem;
                &.collapse{
                  display: block;
                  height: 11.5em;
                  min-height: 11.5em;
                  overflow: hidden;
                  &.in{
                    height: auto;
                    + button{
                      &:after{
                        content: "Read Less";
                      }
                    }
                  }
                }   
                &.collapsing{
                  min-height: 11.5em;
                }
                + button{
                  margin: 0 auto;
                  &:after{
                        content: "Read More";
                      }
                }
                h2{
                  font-size: 1rem;
                  text-transform: uppercase;
                  margin: 0;
                  padding: 0;
                  font-weight: bold;
                }
                pre, ul{
                  margin-bottom: 2rem;
                }
              }
            }
          }
        }
      }
    }
    &.section-bottom{
      position: relative;
      z-index: 0;
      top: -39rem;
      margin-bottom: -39.4rem;
      .section-bottom__bg{
        &.section__bg--left{
          overflow: visible;
          z-index: 2;
          bottom: 0;
          .section__bg--lg{
            img{    
              bottom: 3rem;
              left: -2rem;
            }
          }
          .section__bg--md{
            img{    
              bottom: 3rem;
              left: -3rem;
            }
          }
        }
        &.section__bg--right{
          bottom: 0;
          .section__bg--lg{
            img{
              right: 0;
              top: 13rem;
            }
          }
          .section__bg--md{
            img{
              right: -3rem;
              top: 13rem;
            }
          }
        }
        &.section__bg--bottomright{
          bottom: 0;
          .section__bg--lg{
            img{    
              bottom: -12.2rem;
              right: 8rem;
              top: auto;
            }
          }
          .section__bg--md{
            img{    
              bottom: -12.5rem;
              right: 4.5rem;
              top: auto;
            }
          }
          .section__bg--sm{
            img{    
              bottom: -12.2rem;
              right: 7.5rem;
              top: auto;
            }
          }
          .section__bg--xs{
            img{    
              bottom: -12.2rem;
                right: 8rem;
                top: auto;
                left: auto;
            }
          }
        }
      }
      .top-top{
        bottom: 4rem;
        top: auto;
      }
    }
  }
}

